# market-data-scraper

./: CONTRIBUTING.md  README.md  main.tf  variables.tf
.github/: dependabot.yml
.github/workflows/: pull_request.yml
.github/workflows/assets/: test-provider.tf
function/: .flake8  README.md  pyproject.toml
function/src/: lambda_handler.py
function/tests/: conftest.py  lambda_handler_test.py
